--- a/css/styles.css
+++ b/css/styles.css
@@ -16,17 +16,20 @@
     --body-color: #E5E5E5;
 
 
+
 }
 /*------Global Styles------*/
 html {
     box-sizing: border-box;
+    width: 1600px;
+    background-color: var(--body-color);
+
 }
 *,
-*::before,
-*::after
-
+::before,
+::after
 {
-    box-sizing: inherit;
+ 
     margin: 0 auto;
     padding: 0;
 }
@@ -36,26 +39,35 @@ body {
     text-decoration: none;
     background-color:var(--body-color) ;
     color: var(--text-color);
+    background-color: var(--while-color);
 }
-header,
+/* header,
+
 section,
 footer {
     width: 1600px;
     background-color: var(--while-color);
-}
+} */
 ul {
-    list-style: none; 
+    list-style: none;
+    margin: 0; 
+
 } 
 a {
     color: inherit;
     text-decoration: none;
 }
 
+
 .container {
     width: 1200px;
-    margin: 0 auto;
-}
+    padding: 15px;
 
+}
+ section .container {
+    padding-top: 94px;
+    padding-bottom: 94px;
+ }
 /*-------Header Section---------*/
 .header {
     background-color: var(--while-color);
@@ -68,13 +80,14 @@ a {
 
 /*---Logo---*/
 .logo {
-    margin: 0;
+    
+    margin-left: 0;
+    margin-right: 40px;
     font-family: var(--logo-font);
     font-size: 26px;
     font-weight: 700;
-    margin-bottom: 20px;
     letter-spacing: 0.03em;
-    border: solid 1px red;
+    align-items: center;
 }
 .web {
     color: var(--pretty-color);   
@@ -88,8 +101,38 @@ a {
 }
 /*---Logo---*/
 
-.nav-list a:hover,
-.nav-list a:focus,
+ .header .container { 
+    display: flex;
+    align-items: center;
+} 
+
+ .menu {
+    
+     display: contents;
+ } 
+ .menu div {
+     margin-left: 0;
+ }
+ .nav { 
+    display: flex;
+ }
+  
+ .nav li {
+     display: flex;
+     margin-left: 50px;
+ }
+
+ .contacts {
+     display: flex;
+    margin-right: 0;
+ }  
+.contacts li {
+    margin-left: 50px;
+}
+
+
+.nav a:hover,
+.nav a:focus,
 .contacts a:hover,
 .contacts a:focus
  {
@@ -111,7 +154,8 @@ a {
 .hero-content {
     width: 660px;
     color: var(--while-color);
-    padding-top: 195px;
+    padding-top: 106px;
+
 }
 .hero-title {
     font-size: 44px;
@@ -119,6 +163,8 @@ a {
     line-height: 1.363;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    margin-bottom: 30px;
+  
 }
 
 .sign-in {
@@ -140,9 +186,11 @@ a {
 .features {
     font-size: 14px;
     letter-spacing: 0.03em;
-    color: var(--text-color);
-    
+    color: var(--text-color);    
 }    
+.features ul {
+    display: flex;
+}
 .features-title {
     color: transparent;
     font-size: 0;
@@ -153,6 +201,7 @@ a {
     line-height: 1.714;
     letter-spacing: 0.03em;
 }
+
 .feature-title {
     font-size: 14px;
     font-weight: bold;
@@ -165,41 +214,81 @@ a {
     font-size: 16px;
     letter-spacing: 0.03em;
 }
+.studio .container {
+    padding-top: 0;
+}
+.studio ul {
+    display: flex;
+}
  .studio-title {
     color: var(--header-color);
     font-size: 36px;
     font-weight: bold;
-    
+    padding-bottom: 50px;
+    text-align: center;
 }
+
  /*--------Team Section-----------*/
 .team {
     font-size: 16px;
     letter-spacing: 0.03em;
     background-color: var(--backgroung-team-color);
+    text-align: center;
+
+
+ }
+ .team ul {
+     display: flex;
  }
 .team-title {
     color: var(--header-color);
     font-size: 36px;
     font-weight: 700;
+    padding-bottom: 50px;
+    text-align: center;
+   
+ 
+}
+.member {
+    background: var(--while-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+.member p{
+    padding-bottom: 2em;
 }
 .name {
     color: var(--header-color);
     font-weight: 500;
+    text-align: center;
+    padding-top: 2.3em;
+    padding-bottom: 1em;
 } 
+
+
 /*------Footer Section-------*/   
 .footer {
     background-color: var(--footer-color);
     box-sizing: border-box;
-    height: 250px;
     color:var(--while-color);
     font-size: 14px;
     line-height: 1.714;
 }
 
+.footer .container {
+    padding-bottom: 60px;
+    padding-top: 60px;
+}
+.footer li {
+    margin-bottom: 9px;
+}
+.footer .logo {
+    margin-bottom: 20px;
+}
 .adress {
-    
     font-style: normal;
-    margin-bottom: 10px;
    
 }
 .adress-link {
@@ -211,7 +300,7 @@ a {
     color: var(--pretty-color);
 }
 
-/*--------Portfolio-----------*/
+/*--------------------Portfolio--------------------------*/
 
 .portfolio {
     font-size: 16px;
@@ -225,21 +314,15 @@ a {
 }
 
 
-.project-title {
-    color: var(--header-color);
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    margin-bottom: 10px;
+/* -------Buttons bar--------- */
+.bar-buttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
 }
-
-
-.contacts {
-    color: var(--text-color);
+.bar-buttons li {
+    margin: 0 4px;
 }
-
 button {
     font-size: 16px;
     font-weight: 700;
@@ -259,3 +342,41 @@ button:hover {
     background-color: var(--pretty-color);
     color: var(--while-color);
 } 
+
+/* ----------Projects----------- */
+
+.project-title {
+    color: var(--header-color);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    padding: 20px 24px 4px 24px;
+}
+/* 
+    color: var(--header-color);
+    font-weight: 500;
+    text-align: center;
+ */
+ .project-list {
+     display: flex;
+     justify-content: space-between;
+     flex-wrap: wrap;
+ }
+ .project-list li {
+     margin: 0;
+ }
+ .project-list p {
+    padding: 0px 24px 20px;
+ }
+ .website,
+ .design,
+ .soft,
+ .marketing {
+    background: var(--while-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    margin-bottom: 30px;
+ }
