--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
     --button-color: #F5F4FA;
     --button-hover: #188CE8;
     --body-color: #E5E5E5;
-
+    --card-set-gap: 30px;
 
 
 }
@@ -58,6 +58,10 @@ a {
     text-decoration: none;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+}
 
 .container {
     width: 1200px;
@@ -302,12 +306,6 @@ a {
 
 /*--------------------Portfolio--------------------------*/
 
-.portfolio {
-    font-size: 16px;
-    color: var(--text-color);
-    line-height: 1.875;
-    letter-spacing: 0.03em;
-}
 .hero-portfolio {
    color: transparent;
     font-size: 0; 
@@ -315,6 +313,7 @@ a {
 
 
 /* -------Buttons bar--------- */
+
 .bar-buttons {
     display: flex;
     justify-content: center;
@@ -344,39 +343,42 @@ button:hover {
 } 
 
 /* ----------Projects----------- */
+.portfolio {
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+    color: var(--text-color);
+    line-height: 1.875;
+    letter-spacing: 0.03em;
+}
 
+.card-set {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    margin-left: calc( -1 * var(--card-set-gap));
+    margin-top: calc( -1 * var(--card-set-gap));
+
+}
+
+.card-set > .item {
+    
+    flex-basis: (100% / 3 - 30px);
+    margin-left: var(--card-set-gap);
+    margin-top: var(--card-set-gap);
+}
 .project-title {
     color: var(--header-color);
     font-size: 18px;
     font-weight: 700;
     line-height: 2;
     letter-spacing: 0.06em;
-    padding: 20px 24px 4px 24px;
 }
-/* 
-    color: var(--header-color);
-    font-weight: 500;
-    text-align: center;
- */
- .project-list {
-     display: flex;
-     justify-content: space-between;
-     flex-wrap: wrap;
- }
- .project-list li {
-     margin: 0;
- }
- .project-list p {
-    padding: 0px 24px 20px;
- }
- .website,
- .design,
- .soft,
- .marketing {
-    background: var(--while-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 1px 1px rgba(0, 0, 0, 0.14), 
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    margin-bottom: 30px;
- }
+.card-content {
+    padding: 20px 24px;
+    border-left: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--border-color);
+} 
+
