--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,8 @@
 /*------Global Styles------*/
 html {
     box-sizing: border-box;
-    width: 1600px;
-    background-color: var(--body-color);
+    /* width: 1600px;
+    background-color: var(--body-color); */
 
 }
 *,
@@ -65,15 +65,22 @@ img {
 
 .container {
     width: 1200px;
-    padding: 15px;
+    /* padding: 15px; */
 
 }
- section .container {
+section {
+    width: 1600px;
+    padding: 94px 215px;
+ }
+ /* section .container {
     padding-top: 94px;
     padding-bottom: 94px;
- }
+ } */
+
+
 /*-------Header Section---------*/
 .header {
+    width: 1600px;
     background-color: var(--while-color);
     color: var(--header-color);
     font-weight: 500;
@@ -199,6 +206,7 @@ img {
 .features-title {
     color: transparent;
     font-size: 0;
+ 
 }
 .feature {
     width: 270px;
@@ -212,16 +220,17 @@ img {
     font-weight: bold;
     color: var(--header-color);
     text-transform: uppercase;
-    
+    margin-bottom: 10px;
 }
 /*--------Studio Section---------*/
  .studio {
     font-size: 16px;
     letter-spacing: 0.03em;
-}
-.studio .container {
     padding-top: 0;
 }
+/* .studio .container {
+    padding-top: 0;
+} */
 .studio ul {
     display: flex;
 }
@@ -229,7 +238,7 @@ img {
     color: var(--header-color);
     font-size: 36px;
     font-weight: bold;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
     text-align: center;
 }
 
@@ -249,7 +258,7 @@ img {
     color: var(--header-color);
     font-size: 36px;
     font-weight: 700;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
     text-align: center;
    
  
@@ -268,21 +277,19 @@ img {
     color: var(--header-color);
     font-weight: 500;
     text-align: center;
-    padding-top: 2.3em;
-    padding-bottom: 1em;
+    margin-top: 2.3em;
+    margin-bottom: 1em;
 } 
 
 
 /*------Footer Section-------*/   
 .footer {
+    width: 1600px;
     background-color: var(--footer-color);
     box-sizing: border-box;
     color:var(--while-color);
     font-size: 14px;
     line-height: 1.714;
-}
-
-.footer .container {
     padding-bottom: 60px;
     padding-top: 60px;
 }
